fix(css): adjust cards content margins and sizes, and fix card alignment issues with flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
 .main-container {
   width: 100%;
   max-width: 1440px;
+  /* min-width: 320px; */
   padding: 0 50px;
 }
 
@@ -55,7 +56,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 8px;
+  gap: 4px;
 }
 
 .card-title {
@@ -74,7 +75,7 @@ a {
 }
 
 .card-rating {
-  margin-bottom: 5px;
+  letter-spacing: -1.5px;
 }
 
 .neutral-star {
@@ -306,29 +307,39 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: stretch;
 }
 
 .hebergements-cards a {
   width: 31%;
+  display: flex;
+  flex-direction: column;
 }
 
 .hebergements-cards .card {
   margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .hebergements-cards img {
   width: 100%;
-  height: 124px;
+  height: 114px;
   border-radius: 20px 20px 0 0;
 }
 
 .hebergements-cards .card-content {
-  padding-left: 8px;
+  flex-grow: 1;
+  margin-bottom: 5px;
 }
 
 .hebergements-cards .card-title {
-  font-size: 14px;
   margin-bottom: 8px;
+}
+
+.hebergements-cards .card-rating {
+  font-size: 18px;
 }
 
 .see-more {
@@ -363,6 +374,7 @@ header {
 
 .populaires-cards .card-content {
   width: 67%;
+  margin-bottom: 2px;
 }
 
 /****** Activités ***********/
